# agents-for-pm-nova

./: .gitignore  AGENTS.md  Makefile  README.md  package-lock.json  package.json  slides.md  style.css
demo/: .env.example  README.md  package-lock.json  package.json  pyproject.toml
demo/fixtures/: fallback.json
demo/scripts/: privy_hyperliquid.mjs
demo/src/hyper_demo/: __init__.py  api.py  cli.py  config.py  models.py  storage.py  workshop.py
demo/src/hyper_demo/adapters/: anthropic_managed.py  hyperliquid.py  paper.py  privy_hyperliquid.py
demo/src/hyper_demo/services/: agent_team.py  formal_validation.py  hypertracker.py  managed_chat.py  market.py  metrics.py  monitoring.py  perplexity.py  perplexity_mcp.py  portfolio_manager.py  proposals.py  risk.py  technical_analysis.py  trading_agent.py  workshop_readiness.py
demo/src/hyper_demo/static/: app.js  index.html  privy.js  styles.css
demo/tests/: conftest.py  test_agent_team.py  test_anthropic_managed.py  test_api.py  test_cli.py  test_config.py  test_hyperliquid_adapter.py  test_hypertracker.py  test_market.py  test_metrics.py  test_monitoring.py  test_paper_adapter.py  test_perplexity.py  test_perplexity_mcp.py  test_proposals.py  test_risk.py  test_storage.py  test_technical_analysis.py
docs/: coding-agent-prompts.md  demo-rebuild.md  demo-script.md  handout.md  research.md  speaker-profile.md  storyline.md  testing-pyramid.md
workshop/: .env.example  README.md  design.md  index.html  initial-goal-prompt.md
