[project]
name = "hyperliquid-investment-agent-demo"
version = "0.1.0"
description = "Claude Managed Agents + Hyperliquid testnet investment agent demo."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.98.0",
    "fastapi>=0.115.0",
    "hyperliquid-python-sdk>=0.18.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "rich>=13.8.0",
    "scipy>=1.14.0",
    "typer>=0.12.5",
    "uvicorn[standard]>=0.30.6",
    "websockets>=13.1",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.8",
]

[project.scripts]
demo = "hyper_demo.cli:app"
hyper-demo = "hyper_demo.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.hatch.build.targets.wheel]
packages = ["src/hyper_demo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
